<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="elementarystorm.org.lapazturistica.DescipcionActivity"
    android:background="#ffffff">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Card descripcion de la app-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/acerca_de_app"
                        android:layout_margin="8dp"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="normal|bold"
                        android:textColor="@color/white" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView

                android:text="@string/descripcion_app"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />
            <!-- Card desarrollado por-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/desarrollado_por"
                        android:layout_margin="8dp"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="normal|bold"
                        android:textColor="@color/white" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imageView"
                    android:src="@drawable/elementary_storm" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="ElementaryStorm TEAM"
                        android:id="@+id/textView"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorAccent"
                        android:typeface="serif"
                        android:onClick="linck_elementaryStorm" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="www.comollego.org"
                        android:id="@+id/textView2"
                        android:textStyle="bold"
                        android:typeface="sans"
                        android:textColor="@color/colorAccent"
                        android:onClick="linck_comollego" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="SinVidaSocial"
                        android:id="@+id/textView3"
                        android:textColor="@color/colorAccent"
                        android:layout_marginBottom="8dp"
                        android:onClick="linck_SinVidaSocial" />
                </LinearLayout>
            </LinearLayout>
            <!-- Card terminos y condiciones-->

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/agradecimientos_"
                        android:layout_margin="8dp"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="normal|bold"
                        android:textColor="@color/white" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/agradecimientos"
                    android:layout_gravity="center_horizontal"
                    android:typeface="serif"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="https://mapicons.mapsmarker.com"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="The data are important sites under the license:"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Licencia Creative Commons Atribución Compartir Igual 3.0"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/textView4"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Points such as churches and other places are under license"
                    android:id="@+id/textView5"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Open Database License (ODbL) v1.0"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/textView8"
                    android:layout_marginBottom="8dp" />
            </LinearLayout>
            <!-- Consejos y advertencias-->

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="TIPS AND WARNINGS"
                        android:layout_margin="8dp"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="normal|bold"
                        android:textColor="@color/white" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Remember developers and collaborators will not responsible for misuse of the application or data update failures"
                    android:layout_gravity="center_horizontal"
                    android:typeface="serif"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="11/mayo/2016"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
